--- a/resources/[teste]/rotas/nui/index.html
+++ b/resources/[teste]/rotas/nui/index.html
@@ -15,7 +15,7 @@
         <a class="icon yes"><i class="fas fa-dollar-sign"></i></a>
         <div class="cart-price">
           <small>valor</small>
-          <span>$ 0.00</span>
+          <span>R$ 0.00</span>
         </div>
         <div class="close"><i class="fal fa-times"></i></div>
       </div>
